contract/antlr/contractParser.py
# Generated from contract.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class contractParser ( Parser ):

    grammarFileName = "contract.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'{'", "'}'", "'('", "')'", 
                     "'!'", "'&'", "'|'", "'=>'", "'<=>'", "'U'", "'<='", 
                     "'=='", "'<'", "'!='", "'>='", "'>'", "'.'", "'*'", 
                     "'?'", "'$'", "'#'", "'eps'", "'@fn'", "<INVALID>", 
                     "<INVALID>", "':'", "'EXISTS'", "'FORALL'" ]

    symbolicNames = [ "<INVALID>", "LBRACKET", "RBRACKET", "LDIAMOND", "RDIAMOND", 
                      "LPAREN", "RPAREN", "NOT", "AND", "OR", "IMPL", "EQUIV", 
                      "CUP", "LE", "EQ", "LT", "NEQ", "GE", "GT", "DOT", 
                      "KLEENE", "WILDCARD", "DOLLAR", "HASHTAG", "EPSILON", 
                      "ATFN", "INT", "VAR", "COLON", "EXISTS", "FORALL", 
                      "WS" ]

    RULE_init = 0
    RULE_contract = 1
    RULE_trace = 2
    RULE_contract_atom = 3
    RULE_indexed_var = 4
    RULE_trace_atom = 5

    ruleNames =  [ "init", "contract", "trace", "contract_atom", "indexed_var", 
                   "trace_atom" ]

    EOF = Token.EOF
    LBRACKET=1
    RBRACKET=2
    LDIAMOND=3
    RDIAMOND=4
    LPAREN=5
    RPAREN=6
    NOT=7
    AND=8
    OR=9
    IMPL=10
    EQUIV=11
    CUP=12
    LE=13
    EQ=14
    LT=15
    NEQ=16
    GE=17
    GT=18
    DOT=19
    KLEENE=20
    WILDCARD=21
    DOLLAR=22
    HASHTAG=23
    EPSILON=24
    ATFN=25
    INT=26
    VAR=27
    COLON=28
    EXISTS=29
    FORALL=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contract(self):
            return self.getTypedRuleContext(contractParser.ContractContext,0)


        def EOF(self):
            return self.getToken(contractParser.EOF, 0)

        def getRuleIndex(self):
            return contractParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = contractParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.contract(0)
            self.state = 13
            self.match(contractParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(contractParser.LPAREN, 0)

        def contract(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(contractParser.ContractContext)
            else:
                return self.getTypedRuleContext(contractParser.ContractContext,i)


        def RPAREN(self):
            return self.getToken(contractParser.RPAREN, 0)

        def VAR(self):
            return self.getToken(contractParser.VAR, 0)

        def COLON(self):
            return self.getToken(contractParser.COLON, 0)

        def EXISTS(self):
            return self.getToken(contractParser.EXISTS, 0)

        def FORALL(self):
            return self.getToken(contractParser.FORALL, 0)

        def NOT(self):
            return self.getToken(contractParser.NOT, 0)

        def LBRACKET(self):
            return self.getToken(contractParser.LBRACKET, 0)

        def trace(self):
            return self.getTypedRuleContext(contractParser.TraceContext,0)


        def RBRACKET(self):
            return self.getToken(contractParser.RBRACKET, 0)

        def LDIAMOND(self):
            return self.getToken(contractParser.LDIAMOND, 0)

        def RDIAMOND(self):
            return self.getToken(contractParser.RDIAMOND, 0)

        def contract_atom(self):
            return self.getTypedRuleContext(contractParser.Contract_atomContext,0)


        def EQ(self):
            return self.getToken(contractParser.EQ, 0)

        def LE(self):
            return self.getToken(contractParser.LE, 0)

        def LT(self):
            return self.getToken(contractParser.LT, 0)

        def NEQ(self):
            return self.getToken(contractParser.NEQ, 0)

        def GE(self):
            return self.getToken(contractParser.GE, 0)

        def GT(self):
            return self.getToken(contractParser.GT, 0)

        def AND(self):
            return self.getToken(contractParser.AND, 0)

        def OR(self):
            return self.getToken(contractParser.OR, 0)

        def IMPL(self):
            return self.getToken(contractParser.IMPL, 0)

        def EQUIV(self):
            return self.getToken(contractParser.EQUIV, 0)

        def getRuleIndex(self):
            return contractParser.RULE_contract

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContract" ):
                listener.enterContract(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContract" ):
                listener.exitContract(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContract" ):
                return visitor.visitContract(self)
            else:
                return visitor.visitChildren(self)



    def contract(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = contractParser.ContractContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_contract, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.state = 16
                self.match(contractParser.LPAREN)
                self.state = 17
                self.contract(0)
                self.state = 18
                self.match(contractParser.RPAREN)
                pass
            elif token in [29, 30]:
                self.state = 20
                _la = self._input.LA(1)
                if not(_la==29 or _la==30):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 21
                self.match(contractParser.VAR)
                self.state = 22
                self.match(contractParser.COLON)
                self.state = 23
                self.match(contractParser.LPAREN)
                self.state = 24
                self.contract(0)
                self.state = 25
                self.match(contractParser.RPAREN)
                pass
            elif token in [7]:
                self.state = 27
                self.match(contractParser.NOT)
                self.state = 28
                self.contract(6)
                pass
            elif token in [1]:
                self.state = 29
                self.match(contractParser.LBRACKET)
                self.state = 30
                self.trace(0)
                self.state = 31
                self.match(contractParser.RBRACKET)
                self.state = 32
                self.match(contractParser.LPAREN)
                self.state = 33
                self.contract(0)
                self.state = 34
                self.match(contractParser.RPAREN)
                pass
            elif token in [3]:
                self.state = 36
                self.match(contractParser.LDIAMOND)
                self.state = 37
                self.trace(0)
                self.state = 38
                self.match(contractParser.RDIAMOND)
                self.state = 39
                self.match(contractParser.LPAREN)
                self.state = 40
                self.contract(0)
                self.state = 41
                self.match(contractParser.RPAREN)
                pass
            elif token in [25, 26, 27]:
                self.state = 43
                self.contract_atom()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 57
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 55
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = contractParser.ContractContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_contract)
                        self.state = 46
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 47
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 48
                        self.contract(8)
                        pass

                    elif la_ == 2:
                        localctx = contractParser.ContractContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_contract)
                        self.state = 49
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 50
                        _la = self._input.LA(1)
                        if not(_la==8 or _la==9):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 51
                        self.contract(6)
                        pass

                    elif la_ == 3:
                        localctx = contractParser.ContractContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_contract)
                        self.state = 52
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 53
                        _la = self._input.LA(1)
                        if not(_la==10 or _la==11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 54
                        self.contract(5)
                        pass

             
                self.state = 59
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TraceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(contractParser.LPAREN, 0)

        def trace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(contractParser.TraceContext)
            else:
                return self.getTypedRuleContext(contractParser.TraceContext,i)


        def RPAREN(self):
            return self.getToken(contractParser.RPAREN, 0)

        def KLEENE(self):
            return self.getToken(contractParser.KLEENE, 0)

        def CUP(self):
            return self.getToken(contractParser.CUP, 0)

        def trace_atom(self):
            return self.getTypedRuleContext(contractParser.Trace_atomContext,0)


        def DOT(self):
            return self.getToken(contractParser.DOT, 0)

        def getRuleIndex(self):
            return contractParser.RULE_trace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrace" ):
                listener.enterTrace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrace" ):
                listener.exitTrace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrace" ):
                return visitor.visitTrace(self)
            else:
                return visitor.visitChildren(self)



    def trace(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = contractParser.TraceContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_trace, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 61
                self.match(contractParser.LPAREN)
                self.state = 62
                self.trace(0)
                self.state = 63
                self.match(contractParser.RPAREN)
                self.state = 64
                self.match(contractParser.KLEENE)
                pass

            elif la_ == 2:
                self.state = 66
                self.match(contractParser.LPAREN)
                self.state = 67
                self.trace(0)
                self.state = 68
                self.match(contractParser.CUP)
                self.state = 69
                self.trace(0)
                self.state = 70
                self.match(contractParser.RPAREN)
                pass

            elif la_ == 3:
                self.state = 72
                self.trace_atom()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = contractParser.TraceContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_trace)
                    self.state = 75
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 76
                    self.match(contractParser.DOT)
                    self.state = 77
                    self.trace(3) 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Contract_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(contractParser.VAR, 0)

        def indexed_var(self):
            return self.getTypedRuleContext(contractParser.Indexed_varContext,0)


        def ATFN(self):
            return self.getToken(contractParser.ATFN, 0)

        def INT(self):
            return self.getToken(contractParser.INT, 0)

        def getRuleIndex(self):
            return contractParser.RULE_contract_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContract_atom" ):
                listener.enterContract_atom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContract_atom" ):
                listener.exitContract_atom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContract_atom" ):
                return visitor.visitContract_atom(self)
            else:
                return visitor.visitChildren(self)




    def contract_atom(self):

        localctx = contractParser.Contract_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_contract_atom)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(contractParser.VAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.indexed_var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.match(contractParser.ATFN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(contractParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Indexed_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(contractParser.VAR)
            else:
                return self.getToken(contractParser.VAR, i)

        def LBRACKET(self):
            return self.getToken(contractParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(contractParser.RBRACKET, 0)

        def INT(self):
            return self.getToken(contractParser.INT, 0)

        def getRuleIndex(self):
            return contractParser.RULE_indexed_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexed_var" ):
                listener.enterIndexed_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexed_var" ):
                listener.exitIndexed_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexed_var" ):
                return visitor.visitIndexed_var(self)
            else:
                return visitor.visitChildren(self)




    def indexed_var(self):

        localctx = contractParser.Indexed_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_indexed_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(contractParser.VAR)
            self.state = 90
            self.match(contractParser.LBRACKET)
            self.state = 91
            _la = self._input.LA(1)
            if not(_la==26 or _la==27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 92
            self.match(contractParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trace_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WILDCARD(self):
            return self.getToken(contractParser.WILDCARD, 0)

        def DOLLAR(self):
            return self.getToken(contractParser.DOLLAR, 0)

        def HASHTAG(self):
            return self.getToken(contractParser.HASHTAG, 0)

        def INT(self):
            return self.getToken(contractParser.INT, 0)

        def EPSILON(self):
            return self.getToken(contractParser.EPSILON, 0)

        def getRuleIndex(self):
            return contractParser.RULE_trace_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrace_atom" ):
                listener.enterTrace_atom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrace_atom" ):
                listener.exitTrace_atom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrace_atom" ):
                return visitor.visitTrace_atom(self)
            else:
                return visitor.visitChildren(self)




    def trace_atom(self):

        localctx = contractParser.Trace_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_trace_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 98566144) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.contract_sempred
        self._predicates[2] = self.trace_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def contract_sempred(self, localctx:ContractContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

    def trace_sempred(self, localctx:TraceContext, predIndex:int):
            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         




